crates/ferrum-interfaces/tests/ui/vnext/fail/resource_admission_binding_is_not_deserialize.rs
use ferrum_interfaces::vnext::StaticProvisioningBinding;

fn main() {
    let _: StaticProvisioningBinding = serde_json::from_str("{}").unwrap();
}
